# CourseWork_Apsil

./: AVL.cpp  AVL.h  CMakeLists.txt  Database.cpp  Database.h  Events.cpp  Events.h  Hashtable.cpp  Hashtable.h  List.h  Masters.cpp  Masters.h  Parser.cpp  Parser.h  Records.cpp  Records.h  Structures.cpp  Structures.h  ToString.cpp  ToString.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  masters_add_window.cpp  masters_add_window.h  masters_add_window.ui  masters_remove_window.cpp  masters_remove_window.h  masters_remove_window.ui  records_add_window.cpp  records_add_window.h  records_add_window.ui  records_remove_window.cpp  records_remove_window.h  records_remove_window.ui
Files/: events.txt  masters.txt  records.txt  report.txt
